# object-centric-learning-framework

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  generate_config_docs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: deploy_docs.yaml  lint_and_test.yaml
api/SUMMARY/: index.html
api/ocl/callbacks/: index.html
api/ocl/combined_model/: index.html
api/ocl/conditioning/: index.html
api/ocl/data_decoding/: index.html
api/ocl/datasets/: index.html
api/ocl/decoding/: index.html
api/ocl/feature_extractors/: index.html
api/ocl/losses/: index.html
api/ocl/matching/: index.html
api/ocl/metrics/: index.html
api/ocl/models/: index.html
api/ocl/neural_networks/: index.html
api/ocl/optimization/: index.html
api/ocl/perceptual_grouping/: index.html
api/ocl/preprocessing/: index.html
api/ocl/scheduling/: index.html
api/routed/: index.html
configs/: README.md  __init__.py  index.html
configs/SUMMARY/: index.html
configs/cluster/: README.md  index.html  mlflow_logging.yaml  slurm.yaml
configs/dataset/: README.md  cater.yaml  cater6.yaml  cater6_image.yaml  cater_image.yaml  clevr.yaml  clevr6.yaml  clevrer.yaml  coco.yaml  coco2014_20k.yaml  coco_nocrowd.yaml  dummy_dataset.yaml  index.html  movi_c.yaml  movi_c_image.yaml  movi_e.yaml  movi_e_image.yaml  voc2012.yaml  voc2012_trainaug.yaml  voc2012_trainval.yaml
configs/evaluation/: eval.yaml
configs/evaluation_clustering_config/: index.html
configs/evaluation_config/: index.html
configs/experiment/: README.md  _output_path.yaml  index.html
configs/training_config/: index.html
containers/: CPU_Dockerfile  GPU_Dockerfile  GPU_video_decoding_Dockerfile  README.md
containers/stubs/: README.md
docs/: generate_api_docs.py  index.md
docs/api/: routed.md
docs/configs/: evaluation_clustering_config.md  evaluation_config.md  training_config.md
docs/tutorial/: datasets.md  experiments.md  index.md  installation.md  models.md  usage.md
ocl/: callbacks.py  combined_model.py  conditioning.py  data_decoding.py  datasets.py  decoding.py  losses.py  matching.py  optimization.py  perceptual_grouping.py  preprocessing.py  scheduling.py  transforms.py  typing.py  visualization_types.py  visualizations.py
ocl/cli/: _config.py  cli_utils.py  compute_dataset_size.py  dump_movi_dataset.py  eval.py  eval_cluster_metrics.py  eval_probing_metrics.py  eval_utils.py  run_bridging_eval.py  train.py
ocl/feature_extractors/: __init__.py  clip.py  misc.py  timm.py  utils.py
ocl/metrics/: __init__.py  bbox.py  dataset.py  diagnosis.py  masks.py  tracking.py  utils.py
ocl/models/: __init__.py  savi.py
ocl/neural_networks/: __init__.py  convenience.py  extensions.py  feature_pyramid_networks.py  positional_embedding.py  slate.py  wrappers.py
ocl/utils/: __init__.py  bboxes.py  dataset_patches.py  logging.py  masking.py  resizing.py  routing.py  trees.py  windows.py
routed/: __init__.py
scripts/datasets/: download_and_convert.sh  pyproject.toml
scripts/datasets/conversion_scripts/: convert_clevrer.py  convert_coco.py  convert_data_folder.py  convert_fishbowl.py  convert_movie.py  convert_tfds.py  convert_tfrecords.py  tfds_extended_voc.py  utils.py
scripts/datasets/download_scripts/: download_clevrer_data.sh  download_coco_data.sh  download_deepmind_data.sh
scripts/datasets/misc/: coco20k_files.txt
search/: search_index.json
tests/: conftest.py  test_callbacks.py  test_cli.py  test_clip.py  test_conditioning.py  test_data_routing.py  test_datasets.py  test_decoding.py  test_experiment_configs.py  test_feature_extractors.py  test_metrics.py  test_optimization_wrapper.py  test_perceptual_groupings.py  test_preprocessing.py  test_schedulers.py  test_transforms.py  test_tree_utils.py  test_utils.py
tutorial/: index.html
tutorial/datasets/: index.html
tutorial/evaluation/: index.html
tutorial/experiments/: index.html
tutorial/installation/: index.html
tutorial/models/: index.html
tutorial/usage/: index.html
(+344 files in other folders)
