[tool.poetry]
name = "multi-object-webdatasets"
version = "0.1.0"
description = ""
authors = ["Max Horn <hornmax@amazon.de>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
tensorflow = "^2.11.1"
webdataset = "0.1.103"
pycocotools = "^2.0.4"
numpy = "^1.21.5"
gsutil = "^5.9"
multi-object-datasets = {git = "https://github.com/deepmind/multi_object_datasets.git"}
tqdm = "^4.64.0"
tensorflow-datasets = "^4.6.0"
scipy = "<1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 101
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 101
skip_gitignore = true
remove_redundant_aliases = true
